<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <Button
        android:id="@+id/buttonStartOverlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_overlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonStopOverlay"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/buttonStopOverlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_overlay"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintTop_toBottomOf="@+id/buttonStopOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="오버레이 서비스 상태: 중지됨"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/buttonSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
